--- a/file_upload_server/templates/dashboard.html
+++ b/file_upload_server/templates/dashboard.html
@@ -103,17 +103,12 @@
                         <div class="col-name">
                             <span class="table-icon">📁</span>
                             <span class="name-text">{{ folder.name }}</span>
+                            {% if folder.is_public %}
+                            <span style="color: green; margin-left: 5px;">(Public)</span>
+                            {% endif %}
                         </div>
                         <div class="col-size">
-                            {% if folder.size >= 1024 * 1024 * 1024 %}
-                                {{ (folder.size / 1024 / 1024 / 1024) | round(2) }} GB
-                            {% elif folder.size >= 1024 * 1024 %}
-                                {{ (folder.size / 1024 / 1024) | round(2) }} MB
-                            {% elif folder.size >= 1024 %}
-                                {{ (folder.size / 1024) | round(2) }} KB
-                            {% else %}
-                                {{ folder.size }} B
-                            {% endif %}
+                            <!-- υπάρχων κώδικας -->
                         </div>
                         <div class="col-date">{{ folder.created.split(' ')[0] }}</div>
                         <div class="col-actions">
@@ -121,10 +116,18 @@
                                 <span class="action-icon">📂</span>
                                 <span class="action-text">Open</span>
                             </a>
+                            {% if is_admin and not folder.is_public %}
+                            <button onclick="makeFolderPublic('{{ folder.id }}')" class="btn-make-public">
+                                <span class="action-icon">🌍</span>
+                                <span class="action-text">Make Public</span>
+                            </button>
+                            {% endif %}
+                            {% if folder.user_id == current_user_id or is_admin %}
                             <button onclick="deleteFolder('{{ folder.id }}')" class="btn-delete">
                                 <span class="action-icon">🗑️</span>
                                 <span class="action-text">Delete</span>
                             </button>
+                            {% endif %}
                         </div>
                     </div>
                     {% endfor %}
